--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 
-  <div class="w-[1000px] mx-auto px-6 pb-12">
+  <div class="md:w-[1000px] max-w-[1000px] mx-auto px-6 pb-12">
     <!-- Copyright -->
     <div class="pt-8 border-t border-gray-100 flex flex-col md:flex-row justify-between items-center">
       <p class="text-xs text-gray-400 font-mono uppercase tracking-widest mb-4 md:mb-0">
