Add support for external_url in post front matter
- Modify home.html layout to support external_url field
- When external_url is set, clicking post will open external link in new tab
- If no external_url, behavior remains unchanged (links to post page)

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
             class="post-item group cursor-pointer py-12 border-b border-gray-100 first:pt-0 last:border-0"
             data-categories="{{ post_cats_str }}"
         >
-           <a href="{{ post.url | relative_url }}" class="block hover:opacity-80 transition-opacity no-underline hover:!no-underline">
+           <a href="{% if post.external_url %}{{ post.external_url }}{% else %}{{ post.url | relative_url }}{% endif %}" {% if post.external_url %}target="_blank" rel="noopener noreferrer"{% endif %} class="block hover:opacity-80 transition-opacity no-underline hover:!no-underline">
             <div class="grid grid-cols-1 md:grid-cols-12 gap-8 md:gap-12 items-start">
                 
                 <!-- Content Side -->
