Add new post: Open Robotic Data at Scale with figure styling updates

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -105,6 +105,25 @@ layout: default
             [&_img]:my-8 md:[&_img]:my-12 
             [&_img]:rounded-sm
             
+            /* Figure and figcaption styling */
+            [&_figure]:my-8 md:[&_figure]:my-12
+            [&_figure]:flex
+            [&_figure]:flex-col
+            [&_figure]:items-center
+            [&_figure_img]:grayscale
+            hover:[&_figure_img]:grayscale-0
+            [&_figure_img]:transition-all
+            [&_figure_img]:duration-700
+            [&_figure_img]:rounded-sm
+            [&_figure_img]:my-0
+            [&_figcaption]:text-center
+            [&_figcaption]:text-sm
+            [&_figcaption]:text-gray-600
+            [&_figcaption]:mt-3
+            [&_figcaption]:max-w-[90%]
+            [&_figcaption]:leading-relaxed
+            [&_figcaption]:font-sans
+            
             /* Lists */
             [&_li]:text-base md:[&_li]:text-[1.125rem] 
             [&_li]:text-[#222] 
