Fix blockquote quotes and update Data Lineage link format

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -97,6 +97,8 @@ layout: default
             [&_blockquote]:leading-normal 
             [&_blockquote]:text-black
             [&_blockquote]:not-italic
+            [&_blockquote]:before:content-none
+            [&_blockquote]:after:content-none
             
             /* Images inside markdown */
             [&_img]:grayscale 
