--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,8 @@
     <!-- Copyright -->
     <div class="pt-8 border-t border-gray-100 flex flex-col md:flex-row justify-between items-center">
       <p class="text-xs text-gray-400 font-mono uppercase tracking-widest mb-4 md:mb-0">
-        Codatta Inc., {{ 'now' | date: "%Y" }}
+        <!-- Codatta Inc., {{ 'now' | date: "%Y" }} -->
+        Codatta Inc., 2026
       </p>
       
       <div class="flex space-x-6">
